auth documentation endpoints done
